feat: add fonts stylesheet to index.html
Added a new stylesheet link for `fonts.css` in the `<head>` section of `index.html` to include font styles in the web application.

--- a/Tournaments.Web/wwwroot/index.html
+++ b/Tournaments.Web/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/page-backgrounds.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Tournaments.Web.styles.css" rel="stylesheet" />
     
